--- a/help.html
+++ b/help.html
@@ -228,7 +228,7 @@
  <input
     type="hidden"
     name="_redirect"
-    value="https://password-ruby-ten-five.vercel.app/"
+    value="password.html"
   />
          
          <div class=form-group>
